asset/src/scss/global/_type.scss
// *****************************************************************
// ADDITIONAL RESET
// *****************************************************************
body {
	font-family: $fontStackBody;
	font-weight: 300;
	font-size: 1em;
	line-height: 2em;
}

p {
	font-size: 1.1em;

	@include breakpoint(large) {
		font-size: 1.3em;
		line-height: 1.8em;
		letter-spacing: 0.02em;
	}
}

p.headline {
	font-size: 1.8em;
	font-style: italic;
	font-weight: 400;
	text-transform: uppercase;
}

h1 {
	text-align: center;
	font-family: $fontStackBody;
	font-weight: 200;
	letter-spacing: 0.2em;
	font-size: 2em;
	line-height: 1em;

	&.main {
		text-align: center;
		font-family: $fontStackHeader;
		letter-spacing: -0.12em;
		font-size: 2.8em;
		line-height: 1em;

		.icon {
			text-align: center;
		}
	}	
}

h2 {
	text-align: center;
	font-weight: 400;
	font-style: italic;
	letter-spacing: 0.2em;
	font-size: 1.1em;
	line-height: 1em;

	@include breakpoint(medium) {
		letter-spacing: 0.2em;
		font-size: 1.1em;
		line-height: 1em;
	}

}




// *****************************************************************
// MAIN BLOCKS
// *****************************************************************
.block {
	&.img-wrap {
		text-align: center;
	}
}


// *****************************************************************
// FOOTER
// *****************************************************************
section.footer {
	// TYPE
	letter-spacing: 0.04em;
	font-size: 0.8em;
	line-height: 1.6em;
	text-align: center;
}


// *****************************************************************
// LOADER
// *****************************************************************
.loader {
	text-align: center;
	color: $white;
	letter-spacing: 0.4em;
	font-weight: 300;
}


// *****************************************************************
// HEADER & LOGO
// *****************************************************************
section.header {
	h1 {
		@include text-replacement();
		text-align: center;
	}
}

// *****************************************************************
// MAIN NAV
// *****************************************************************
nav.main-nav {
	a {
		text-align: center;
		text-decoration: none;
		text-align: center;
		font-size: 0.6em;
		letter-spacing: 0.14em;
	}

	@include breakpoint("max-width: 50em") {
		.item {
			line-height: 1.4em;
		}
	}
	
	@include breakpoint(medium) {
		.item {
			font-size: 1.8em;
			line-height: $headerHeight;
			letter-spacing: 0.25em;
		}
	}
}


// *****************************************************************
// HERO WORDAGE (including home page)
// *****************************************************************
.page-header {
	text-align: center;

	h1.title {
		font-family: $fontStackHeader;
		letter-spacing: -0.12em;
		font-size: 2.8em;
		line-height: 1em;
	}

	p {
		font-size: 1.1em;
		line-height: 1.6em;
		letter-spacing: 0.04em;
		font-weight: 400;
		text-transform: uppercase;
		font-style: italic;
	}

	.icon {
		text-align: center;		
	}
}


// *****************************************************************
// META
// *****************************************************************
.meta {
	li {
		font-weight: 400;
		font-style: italic;
		line-height: 1.4em;

		.header {
			font-weight: 200;
			font-style: normal;
			letter-spacing: 0.2em;
		} 
	}

	@include breakpoint("min-width: 40em") {
		text-align: center;

		.header {
			font-size: 1.2em;
			line-height: 1.6em;
		}		
	}

}


// *****************************************************************
// INDIVIDUAL PROJECT PAGES
// *****************************************************************
#lipsum {
	.lipsum-code {
		font-size: 1.6em;
		font-weight: 400;
		font-style: italic;
		text-align: center;
		letter-spacing: 0.1em;

		@include breakpoint("max-width: 37.5em") {
			hyphens: auto;
		}
	}
}


// *****************************************************************
// SOCIAL
// *****************************************************************
.social {
	.word {
		text-transform: uppercase;
		font-size: 0.8em;
		line-height: 1.2em;
		letter-spacing: 0.2em;
	}
}

// EMAIL & PHONE
.noicon {
	font-weight: 400;
	font-style: italic;
	font-size: 1.2em;
	letter-spacing: 0.05em;

	.accent {
		font-weight: 200;
		font-style: normal;
		text-transform: uppercase;
		font-size: 1em;
	}
}
p.letschat {
	text-align: center;	
}




// *****************************************************************
// HOME
// *****************************************************************
.home {
	header {
		text-align: center;

		.sub {
			font-weight: 400;
			font-style: italic;
			font-size: 1em;
			letter-spacing: 0.2em
		}
	}
}


// *****************************************************************
// WORK INDEX
// *****************************************************************
.nav-work {
	text-align: center;

	li {
		font-weight: 200;
		letter-spacing: 0.2em;
		text-transform: uppercase;
		line-height: $navWorkHeight;
	}
}

.clientlist {
	text-align: center;
}

li.nav-project {
	h2 {
		.subtext {
			font-size: 0.8em;
			font-weight: 200em;
			font-style: normal;
			letter-spacing: 0.04em;
		}
	}
}


// *****************************************************************
// ABOUT
// *****************************************************************
.about {
	.lead {
		h1 {
			font-weight: 200;
			font-size: 1.8em;
			line-height: 1.1em;
			letter-spacing: 0.03em;
			text-align: left;

			@include breakpoint("min-width: 40em") {
				font-size: 2.8em;
				letter-spacing: 0.09em;
			}

			@include breakpoint(large) {
				font-size: 4em;
			}
		}
	}

}

.tools {
	text-align: center;

	.word {
		@include text-replacement();
	}
}

.bonus {
	text-align: center;

	li {
		line-height: 40px;
		height: 40px;
		text-transform: uppercase;
	}
}


// *****************************************************************
// BREAKPOINT LARGE (65.75em);
// *****************************************************************
@media screen and (min-width: 64.375em) {
	.home {
		.page-header {
			p {
				letter-spacing: 0.4em;
				font-size: 1.3em;
			}
		}
	}
}

